--- a/package.json
+++ b/package.json
@@ -7,23 +7,36 @@
   "license": "MIT",
   "scripts": {
     "build:client": "webpack --config build/webpack.client.js",
-    "server": "node src/server/app.ts"
+    "build:server": "webpack --config build/webpack.server.js",
+    "start": "cd dist && nodemon app.js",
+    "build": "npm-run-all --parallel build:*"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
     "@types/koa": "^2.13.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
+    "axios": "^0.25.0",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/preset-react": "^7.16.7",
+    "@types/koa-static": "^4.0.2",
+    "@types/koa__router": "^8.0.11",
     "babel-loader": "^8.2.3",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
     "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
