--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.11",
     "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "webpack": "^5.68.0",
