--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:client": "webpack --config build/webpack.client.js",
     "build:server": "webpack --config build/webpack.server.js",
-    "build:all": "npm-run-all --parallel build:*",
+    "builds": "npm-run-all --parallel build:*",
     "start": "cd dist && nodemon app.js",
     "client": "webpack --config config/webpack.client.js",
     "server": "webpack --config config/webpack.server.js",
